tests/invalid/invalid_symbol.lang
proc "c" main() void {
    var hello: i32 = a;
}
